testdata/fixtures/audit/negative/supabase_rls_neg_options_object_js.js
import { createClient } from "@supabase/supabase-js";

// unrelated second argument shape (an options object, not a key) — must
// not fire
const supabase = createClient(supabaseUrl, {
  auth: { persistSession: false },
});

export default supabase;
